--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   country_flags: ^3.2.0
   modal_bottom_sheet: ^3.0.0
   flutter_dotenv: ^5.2.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
