Fetch and load markers on the map

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  arcgis_maps: ^200.6.0+4426
   dio: ^5.8.0+1
   shared_preferences: ^2.5.2
   intl: ^0.19.0
@@ -49,6 +48,11 @@ dependencies:
   modal_bottom_sheet: ^3.0.0
   flutter_dotenv: ^5.2.1
   path_provider: ^2.1.5
+  flutter_map: ^7.0.2
+  flutter_map_tile_caching: ^10.0.0
+  latlong2: ^0.9.1
+  flutter_map_geojson: ^1.0.8
+  turf: ^0.0.10
 
 dev_dependencies:
   flutter_test:
