--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - .env
+     - assets/legend/building_legend_config.json
+     - assets/legend/entrance_legend_config.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
