--- a/assets/legend/entrance_legend_config.json
+++ b/assets/legend/entrance_legend_config.json
@@ -1,40 +1,24 @@
 {
     "quality": {
         "Të dhëna pa gabime": {
-            "color": "#4A90E2B3",
+            "color": "#1B5E20F2",
             "value": 1
         },
         "Mungesa në të dhënat": {
-            "color": "#9B59B6B3",
+            "color": "#263238F2",
             "value": 2
         },
         "Të dhëna kontradiktore": {
-            "color": "#8B4513B3",
+            "color": "#4A148CF2",
             "value": 3
         },
-        "<Per tu pare>": {
-            "color": "#008080B3",
-            "value": 4
-        },
-        "<Per tu pare>2": {
-            "color": "#3C91D6B3",
-            "value": 5
-        },
-        "<Per tu pare>3": {
-            "color": "#3C91D6B3",
-            "value": 6
-        },
-        "<Per tu pare>4": {
-            "color": "#3C91D6B3",
-            "value": 7
-        },
-        "<Per tu pare>5": {
-            "color": "#3C91D6B3",
-            "value": 8
-        },
-        "<Per tu pare>6": {
-            "color": "#3C91D6B3",
+        "Të dhëna të patestuara": {
+            "color": "#004D40F2",
             "value": 9
+        },
+        "Të dhëna të fshira": {
+            "color": "#1A237EF2",
+            "value": 0
         }
     },
     "DEFAULT": {
