--- a/assets/legend/building_legend_config.json
+++ b/assets/legend/building_legend_config.json
@@ -1,55 +1,55 @@
 {
     "quality": {
         "Të dhëna pa gabime": {
-            "color": "#1B5E20F2",
+            "color": "#1B5E20",
             "value": 1
         },
         "Mungesa në të dhënat": {
-            "color": "#263238F2",
+            "color": "#263238",
             "value": 2
         },
         "Të dhëna kontradiktore": {
-            "color": "#4A148CF2",
+            "color": "#4A148C",
             "value": 3
         },
         "Të dhëna të patestuara": {
-            "color": "#004D40F2",
+            "color": "#004D40",
             "value": 9
         },
         "Të dhëna të fshira": {
-            "color": "#1A237EF2",
+            "color": "#1A237E",
             "value": 0
         }
     },
     "review": {
         "Nuk ka nevojë për rishikim": {
-            "color": "#4A90E2B3",
+            "color": "#4A90E2",
             "value": 1
         },
         "Rishikimi i aprovuar": {
-            "color": "#9575CDB3",
+            "color": "#9575CD",
             "value": 2
         },
         "Rishikimi i ekzekutuar": {
-            "color": "#1E88E5B3",
+            "color": "#1E88E5",
             "value": 3
         },
         "Rishikimi në pritje": {
-            "color": "#1A88E5B3",
+            "color": "#1A88E5",
             "value": 4
         },
         "Rishikimi i rihapur": {
-            "color": "#64B5F6B3",
+            "color": "#64B5F6",
             "value": 5
         },
         "Kërkohet rishikim": {
-            "color": "#B0838FB3",
+            "color": "#B0838F",
             "value": 6
         }
     },
     "DEFAULT": {
         "Default": {
-            "color": "#90A4AEB3",
+            "color": "#90A4AE",
             "value": 0
         }
     }
