--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,10 +53,15 @@ dependencies:
   flutter_map_geojson: ^1.0.8
   geolocator: ^9.0.1
   jwt_decoder: ^2.0.1
+  sqflite: ^2.3.0
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  
 
 dependency_overrides:
   geolocator_android: 4.6.1
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
 
