--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   sqflite: ^2.3.0
   path_provider: ^2.1.1
   path: ^1.8.3
-  
+  flutter_typeahead: ^5.2.0
 
 dependency_overrides:
   geolocator_android: 4.6.1
