--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   path_provider: ^2.1.1
   path: ^1.8.3
   flutter_typeahead: ^5.2.0
+  flutter_speed_dial: ^7.0.0
 
 dependency_overrides:
   geolocator_android: 4.6.1
