--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
-  shared_preferences: ^2.5.2
   intl: ^0.19.0
   flutter_localization: ^0.3.1
   get_it: ^8.0.3
@@ -59,6 +58,8 @@ dependencies:
   flutter_typeahead: ^5.2.0
   flutter_speed_dial: ^7.0.0
   shimmer: ^3.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dependency_overrides:
   geolocator_android: 4.6.1
