--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   equatable: ^2.0.5
+  geodesy: ^0.10.2
 
 dependency_overrides:
   geolocator_android: 4.6.1
