--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   hive_flutter: ^1.1.0
   equatable: ^2.0.5
   geodesy: ^0.10.2
+  shared_preferences: ^2.5.3
 
 dependency_overrides:
   geolocator_android: 4.6.1
