--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   equatable: ^2.0.5
   geodesy: ^0.10.2
   shared_preferences: ^2.5.3
+  web_socket_channel: ^2.4.0
 
 dependency_overrides:
   geolocator_android: 4.6.1
