--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
-  intl: ^0.19.0
+  intl: ^0.20.2
   flutter_localization: ^0.3.1
   get_it: ^8.0.3
   flutter_bloc: ^9.1.0
@@ -50,7 +50,7 @@ dependencies:
   flutter_map_tile_caching: ^10.0.0
   latlong2: ^0.9.1
   flutter_map_geojson: ^1.0.8
-  geolocator: ^9.0.1
+  geolocator: ^14.0.2
   jwt_decoder: ^2.0.1
   sqflite: ^2.3.0
   path_provider: ^2.1.1
@@ -63,12 +63,16 @@ dependencies:
   equatable: ^2.0.5
   geodesy: ^0.10.2
   shared_preferences: ^2.5.3
-  web_socket_channel: ^2.4.0
+  web_socket_channel: ^3.0.3
+  drift: ^2.18.0
+  sqlite3_flutter_libs: ^0.5.15
 
 dependency_overrides:
   geolocator_android: 4.6.1
+
 dev_dependencies:
-  build_runner: ^2.4.6
+  drift_dev: ^2.18.0
+  build_runner: ^2.4.6  
   flutter_test:
     sdk: flutter
 
@@ -77,7 +81,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
