add offline/online map support, configuration, and download management
- Introduced TileState & TileCubit for managing map tile state (online/offline modes, sessions, tile access, map center)
- Added AppConfig for centralized settings, environment-based API/ESRI endpoints, and map defaults
- Implemented DownloadUsecases for offline download logic via repository layer
- Built OfflineMap UI for selecting, downloading, and tracking offline map tile areas with metadata handling
- Modifying OfflineMapList UI for viewing, applying, and deleting offline sessions with legacy session support

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,15 @@
-ESRI_API_URL=
+#ESRI API Configuration
+ESRI_API_HOST=
+ESRI_API_SCHEME=
+ESRI_API_PATH=
+
+#ESRI API FOR MUNICIPALITY CONFIGURATION
+ESRI_MUNICIPALITY_HOST=
+ESRI_MUNICIPALITY_SCHEME=
+ESRI_MUNICIPALITY_PATH=
+
+#API SOCKET ENDPOINT
+API_SOCKET_URL=
+
+#API URL
+API_URL=
