feat: Update BuildingEntity with default values and add fromMap factory method
- Set default values for geometryType, bldCensus2023, bldQuality, bldStatus, bldType, bldClass, bldWasteWater, bldElectricity, bldPipedGas, bldElevator, bldCentroidStatus, bldReview, and bldWaterSupply in BuildingEntity.
- Implemented fromMap factory method to create BuildingEntity from a map.
- Added utility methods for parsing coordinates and handling epoch milliseconds.

feat: Enhance BuildingUseCases with intersection checks and save functionality

- Added method to check for intersections with other buildings using turf library.
- Updated saveBuilding method to return SaveResult with success status and messages.
- Refactored building overlap validation logic.

feat: Introduce addNewBuilding method in AttributesCubit

- Created a method to initialize a new BuildingEntity with default values and emit state with attributes.

fix: Update ViewMap to handle building saving and display messages

- Refactored building saving logic to use new SaveResult structure.
- Updated UI to show success or error messages based on save results.

chore: Add localization keys for building save messages

- Added keys for success messages when adding and updating buildings in localization files.

chore: Update pubspec.yaml and pubspec.lock for turf dependency

- Added turf package for geometric operations.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   web_socket_channel: ^3.0.3
   drift: ^2.18.0
   sqlite3_flutter_libs: ^0.5.15
+  turf: ^0.0.10
 
 dependency_overrides:
   geolocator_android: 4.6.1
