--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   drift: ^2.18.0
   sqlite3_flutter_libs: ^0.5.15
   turf: ^0.0.10
+  uuid: ^4.5.1
 
 dependency_overrides:
   geolocator_android: 4.6.1
