--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.15
   turf: ^0.0.10
   uuid: ^4.5.1
+  crypto: ^3.0.6
 
 dependency_overrides:
   geolocator_android: 4.6.1
