--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   turf: ^0.0.10
   uuid: ^4.5.1
   crypto: ^3.0.6
+  connectivity_plus: ^6.1.5
 
 dependency_overrides:
   geolocator_android: 4.6.1
