--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   uuid: ^4.5.1
   crypto: ^3.0.6
   connectivity_plus: ^6.1.5
+  flutter_native_splash: ^2.4.6
 
 dependency_overrides:
   geolocator_android: 4.6.1
