--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   crypto: ^3.0.6
   connectivity_plus: ^6.1.5
   flutter_native_splash: ^2.4.6
+  collection: ^1.18.0
 
 dependency_overrides:
   geolocator_android: 4.6.1
