--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ^3.5.3
@@ -72,6 +72,7 @@ dependencies:
   connectivity_plus: ^6.1.5
   flutter_native_splash: ^2.4.6
   collection: ^1.18.0
+  package_info_plus: ^8.0.2
 
 dependency_overrides:
   geolocator_android: 4.6.1
