--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   connectivity_plus: ^6.1.5
   flutter_native_splash: ^2.4.6
   collection: ^1.18.0
+  url_launcher: ^6.3.1
 
 dependency_overrides:
   geolocator_android: 4.6.1
