--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   collection: ^1.18.0
   url_launcher: ^6.3.1
   package_info_plus: ^8.0.2
+  proj4dart: ^2.1.0
 
 dependency_overrides:
   geolocator_android: 4.6.1
