feat: Implement secure storage for sensitive data and add forgot password functionality
- Enhanced StorageService to use SecureStorageService for sensitive keys (accessToken, refreshToken, etc.).
- Added AuthGate to manage navigation based on token validity.
- Introduced ForgotPasswordCubit and corresponding view for password reset functionality.
- Updated localization keys for forgot password feature.
- Registered new routes for forgot password and auth gate.
- Integrated forgot password logic into AuthRepository and AuthUseCases.
- Refactored login tablet view to navigate to forgot password view.
- Added secure storage plugin dependencies for various platforms.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   equatable: ^2.0.5
+  flutter_secure_storage: ^9.2.2
   geodesy: ^0.10.2
   shared_preferences: ^2.5.3
   web_socket_channel: ^3.0.3
