--- a/.env.template
+++ b/.env.template
@@ -32,3 +32,6 @@ BASEMAP_ASIG_SATELLITE_2025_URL=https://di-albania-satellite1.img.arcgis.com/arc
 
 # MapServer export for snapshots
 MAPSERVER_EXPORT_URL=https://asrbd.instat.gov.al/server/rest/services/SALSTAT/asrbd/MapServer/export
+
+# Share building URL
+SHARE_BASE_URL=https://web-asrbd.instat.gov.al:8443
