--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   url_launcher: ^6.3.1
   package_info_plus: ^8.0.2
   proj4dart: ^2.1.0
+  share_plus: ^7.2.2
 
 dependency_overrides:
   geolocator_android: 4.6.1
