fix: update validation messages in localization

--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,7 @@
 ESRI_USERNAME=salstatuser
 ESRI_PASSWORD=EZ]3J*BsiXwtY+^
-TEST_USERNAME=enian.qosja@gmail.com
-TEST_PASSWORD=12345678
+TEST_USERNAME=
+TEST_PASSWORD=
 
 
 #ESRI API Configuration
